<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendOTPActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:contentDescription="Verify using firebase"
        android:src="@drawable/sent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Send OTP"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/otp_will_br_sent_shortly"
        android:textColor="@color/black"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/input_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/enter_your_mobile_number"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/_44"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/_69359770"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginEnd="70dp"-->
<!--            android:background="@color/design_default_color_primary_dark"/>-->

    </LinearLayout>
    <Button
        android:id="@+id/otpbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/button"
        android:text="@string/receive_otp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>



</ScrollView>
