<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerifyOTPActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="Verify using firebase"
            android:src="@drawable/receive" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="verify OTP"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_sent"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"

            android:textColor="@color/design_default_color_primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/code"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label"

                />

            <EditText
                android:id="@+id/code1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label"

                />

            <EditText
                android:id="@+id/code2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label"

                />

            <EditText
                android:id="@+id/code3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label"

                />

            <EditText
                android:id="@+id/code4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label"

                />

            <EditText
                android:id="@+id/code5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_otp_yet"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/please_resend_otp"
                android:textColor="@color/design_default_color_primary"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/otpbuttonverify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/button"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>